# VulkanFun

./: .gitignore  CMakeLists.txt  README.md
VulkanFun/: CMakeLists.txt
VulkanFun/src/: Application.cpp  Application.h  ApplicationStructs.h  Shapes.hpp  VulkanFun.cpp  config.h
VulkanFun/src/shaders/: compile_shaders.bat  shader.frag  shader.vert
